--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"/>
+            <Button
+                android:id="@+id/calculate_button"
+                android:theme="@style/SuccessButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Calculate"/>
         </LinearLayout>
     </RelativeLayout>
 
